# AstroPropose

./: .gitignore  README.md  README_CN.md  env.example
backend/: config.py  create_form_template.py  create_proposal_type.py  pyproject.toml  requirements.txt  run.py  seed_csst_test_data.py  test_login.py
backend/app/: __init__.py
backend/app/api/: auth.py  external_tools.py  form_templates.py  instruments.py  proposal_types.py  proposals.py  workflows.py
backend/app/core/: external_tool_executor.py  workflow_engine.py
backend/app/models/: models.py
backend/migrations/versions/: 0c75cc61c9ea_add_external_tools_models.py  0fd963dc2e15_add_proposaltype_and_link_to_workflow.py  385388bc973d_add_tool_type_and_validation_config.py  54a95f593301_update_modles.py  700e1168cc70_add_form_template_id_to_workflow_state.py  d87b58fcd8cd_initial_models.py  de61f52173ed_.py
backend/tests/: conftest.py  test_proposals.py  test_workflow_engine.py
docs/: admin_setup_guide.md  csst_admin_playbook.md  csst_architecture_mapping.md  csst_requirements.md  csst_test_data_guide.md  csst_updates_summary.md  csst_workflow_associations.md  deployment_checklist.md  form_management_guide.md  multi_form_association_design.md  reviewer_response_draft.md  reviewer_response_external_tools.md  reviewer_response_external_tools_concise.md  section_3.4_addition.md  security_testing_checklist.md  transitions_configuration_guide.md  workflow_form_tool_association.md  workflow_save_mechanism.md
frontend/: jsconfig.json  package-lock.json  package.json
frontend/app/: layout.js  page.js
(+11 files in other folders)
