[project]
name = "astropropose-backend"
version = "0.1.0"
description = "AstroPropose backend services"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Flask==2.2.2",
    "Flask-SQLAlchemy==3.0.3",
    "Flask-Migrate==3.1.0",
    "psycopg2-binary>=2.9.9",
    "redis==4.3.4",
    "python-dotenv==0.20.0",
    "Flask-Cors==3.0.10",
    "PyJWT==2.4.0",
    "Werkzeug==2.2.2",
    "SQLAlchemy==1.4.39",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = true

dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*", "migrations*"]

